fix spacing and added .gitignore

--- a/starter-template.css
+++ b/starter-template.css
@@ -96,6 +96,7 @@ header, .box {
 
 .box {
   opacity: 0.8;
+  padding: 10px;
 }
 
 header h1 {
@@ -104,6 +105,7 @@ header h1 {
   font-weight:300;
   opacity: 1;
   color: black;
+  padding: 10px;
 }
 
 .box p {
